[features]
default = []
opentelemetry-grpc = ["opentelemetry"]
opentelemetry-http = ["opentelemetry"]

[package]
name = "utils"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
colored = "2.1.0"
error-stack = { version = "0.5.0", features = ["anyhow"] }
futures = "0.3.30"
futures-util = "0.3.30"
k8s-openapi = { version = "0.22.0", features = ["v1_30"] }
kube = "0.93.1"
once_cell = "1.19.0"
opentelemetry = "0.24.0"
parking_lot = "0.12.3"
podman-api = "0.10.0"
redis = { version = "0.25.4", features = ["aio", "tokio-comp"] }
regex = "1.10.6"
rstest = "0.21.0"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
tempfile = "3.11.0"
time = "0.3.36"
tokio = { version = "1.38.0", features = ["full", "tracing"] }
tracing = "0.1.40"
tracing-appender = "0.2.3"
tracing-core = "0.1.32"
tracing-subscriber = { version = "0.3.18", features = ["time"] }
